src/main/java/dev/conductor/centra/cql/CqlParser.java
package dev.conductor.centra.cql;// Generated from /Users/shamil/Documents/Projects/conductor.dev/data-services/src/main/antlr4/dev/conductor/cql/cql.g4 by ANTLR 4.8
import org.antlr.v4.runtime.Parser;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FUNCTION=1, DATETIME=2, NUMBER=3, WHITESPACE=4, SCOL=5, DOT=6, OPEN_PAR=7, 
		CLOSE_PAR=8, COMMA=9, EQ=10, STAR=11, CONTAINS=12, NOT_CONTAINS=13, LT=14, 
		LT_EQ=15, GT=16, GT_EQ=17, NOT_EQ=18, K_AFTER=19, K_AND=20, K_ASC=21, 
		K_BEFORE=22, K_BY=23, K_CHANGED=24, K_DESC=25, K_EMPTY=26, K_IN=27, K_IS=28, 
		K_NOT=29, K_NULL=30, K_ON=31, K_OR=32, K_ORDER=33, K_TO=34, K_WAS=35, 
		F_AFFECTED_VERSION=36, F_APPROVALS=37, F_ASSIGNEE=38, F_ATTACHMENTS=39, 
		F_CATEGORY=40, F_COMMENT=41, F_COMPONENT=42, F_CREATED=43, F_CREATED_DATE=44, 
		F_CREATOR=45, F_CUSTOM_FIELD=46, F_CUSTOMER_REQUEST_TYPE=47, F_DATE=48, 
		F_DESCRIPTION=49, F_DUE=50, F_DURATION=51, F_ENVIRONMENT=52, F_EPIC_LINK=53, 
		F_FILTER=54, F_FIX_VERSION=55, F_ISSUE=56, F_ISSUE_KEY=57, F_ISSUE_TYPE=58, 
		F_KEY=59, F_LABEL=60, F_LABELS=61, F_LAST_VIEWED=62, F_LEVEL=63, F_NUMBER=64, 
		F_ORGANIZATION=65, F_ORIGINAL_ESTIMATE=66, F_PARENT=67, F_PRIORITY=68, 
		F_PROJECT=69, F_RANK=70, F_REMAINING_ESTIMATE=71, F_REPORTER=72, F_REQUEST_CHANNEL_TYPE=73, 
		F_REQUEST_LAST_ACTIVITY_TIME=74, F_RESOLUTION=75, F_RESOLUTION_DATE=76, 
		F_RESOLVED=77, F_SLA=78, F_SPRINT=79, F_STATUS=80, F_SUMMARY=81, F_TEXT=82, 
		F_TIME_SPENT=83, F_TYPE=84, F_UPDATED=85, F_USER=86, F_VERSION=87, F_VOTER=88, 
		F_VOTES=89, F_WATCHER=90, F_WATCHERS=91, F_WORK_RATIO=92, IDENTIFIER=93, 
		STRING_LITERAL=94, COMMENT=95, LINE_COMMENT=96, SPACES=97;
	public static final int
		RULE_parse = 0, RULE_cql_stmt_list = 1, RULE_cql_stmt = 2, RULE_expr = 3, 
		RULE_ordering_term = 4, RULE_operator = 5, RULE_literal_value = 6, RULE_literal_list = 7, 
		RULE_keyword = 8, RULE_state_name = 9, RULE_field = 10, RULE_compare_dates = 11, 
		RULE_dates = 12;
	private static String[] makeRuleNames() {
		return new String[] {
			"parse", "cql_stmt_list", "cql_stmt", "expr", "ordering_term", "operator", 
			"literal_value", "literal_list", "keyword", "state_name", "field", "compare_dates", 
			"dates"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "' '", "';'", "'.'", "'('", "')'", "','", "'='", 
			"'*'", "'~'", "'!~'", "'<'", "'<='", "'>'", "'>='", "'!='"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FUNCTION", "DATETIME", "NUMBER", "WHITESPACE", "SCOL", "DOT", 
			"OPEN_PAR", "CLOSE_PAR", "COMMA", "EQ", "STAR", "CONTAINS", "NOT_CONTAINS", 
			"LT", "LT_EQ", "GT", "GT_EQ", "NOT_EQ", "K_AFTER", "K_AND", "K_ASC", 
			"K_BEFORE", "K_BY", "K_CHANGED", "K_DESC", "K_EMPTY", "K_IN", "K_IS", 
			"K_NOT", "K_NULL", "K_ON", "K_OR", "K_ORDER", "K_TO", "K_WAS", "F_AFFECTED_VERSION", 
			"F_APPROVALS", "F_ASSIGNEE", "F_ATTACHMENTS", "F_CATEGORY", "F_COMMENT", 
			"F_COMPONENT", "F_CREATED", "F_CREATED_DATE", "F_CREATOR", "F_CUSTOM_FIELD", 
			"F_CUSTOMER_REQUEST_TYPE", "F_DATE", "F_DESCRIPTION", "F_DUE", "F_DURATION", 
			"F_ENVIRONMENT", "F_EPIC_LINK", "F_FILTER", "F_FIX_VERSION", "F_ISSUE", 
			"F_ISSUE_KEY", "F_ISSUE_TYPE", "F_KEY", "F_LABEL", "F_LABELS", "F_LAST_VIEWED", 
			"F_LEVEL", "F_NUMBER", "F_ORGANIZATION", "F_ORIGINAL_ESTIMATE", "F_PARENT", 
			"F_PRIORITY", "F_PROJECT", "F_RANK", "F_REMAINING_ESTIMATE", "F_REPORTER", 
			"F_REQUEST_CHANNEL_TYPE", "F_REQUEST_LAST_ACTIVITY_TIME", "F_RESOLUTION", 
			"F_RESOLUTION_DATE", "F_RESOLVED", "F_SLA", "F_SPRINT", "F_STATUS", "F_SUMMARY", 
			"F_TEXT", "F_TIME_SPENT", "F_TYPE", "F_UPDATED", "F_USER", "F_VERSION", 
			"F_VOTER", "F_VOTES", "F_WATCHER", "F_WATCHERS", "F_WORK_RATIO", "IDENTIFIER", 
			"STRING_LITERAL", "COMMENT", "LINE_COMMENT", "SPACES"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "cql.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public CqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ParseContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(CqlParser.EOF, 0); }
		public List<Cql_stmt_listContext> cql_stmt_list() {
			return getRuleContexts(Cql_stmt_listContext.class);
		}
		public Cql_stmt_listContext cql_stmt_list(int i) {
			return getRuleContext(Cql_stmt_listContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CqlListener ) ((CqlListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CqlListener ) ((CqlListener)listener).exitParse(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CqlVisitor) return ((CqlVisitor<? extends T>)visitor).visitParse(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParseContext parse() throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_parse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(29);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << DATETIME) | (1L << SCOL) | (1L << OPEN_PAR) | (1L << K_EMPTY) | (1L << K_NOT) | (1L << F_AFFECTED_VERSION) | (1L << F_APPROVALS) | (1L << F_ASSIGNEE) | (1L << F_ATTACHMENTS) | (1L << F_CATEGORY) | (1L << F_COMMENT) | (1L << F_COMPONENT) | (1L << F_CREATED) | (1L << F_CREATED_DATE) | (1L << F_CREATOR) | (1L << F_CUSTOM_FIELD) | (1L << F_CUSTOMER_REQUEST_TYPE) | (1L << F_DATE) | (1L << F_DESCRIPTION) | (1L << F_DUE) | (1L << F_DURATION) | (1L << F_ENVIRONMENT) | (1L << F_EPIC_LINK) | (1L << F_FILTER) | (1L << F_FIX_VERSION) | (1L << F_ISSUE) | (1L << F_ISSUE_KEY) | (1L << F_ISSUE_TYPE) | (1L << F_KEY) | (1L << F_LABEL) | (1L << F_LABELS) | (1L << F_LAST_VIEWED) | (1L << F_LEVEL))) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & ((1L << (F_NUMBER - 64)) | (1L << (F_ORGANIZATION - 64)) | (1L << (F_ORIGINAL_ESTIMATE - 64)) | (1L << (F_PARENT - 64)) | (1L << (F_PRIORITY - 64)) | (1L << (F_PROJECT - 64)) | (1L << (F_RANK - 64)) | (1L << (F_REMAINING_ESTIMATE - 64)) | (1L << (F_REPORTER - 64)) | (1L << (F_REQUEST_CHANNEL_TYPE - 64)) | (1L << (F_REQUEST_LAST_ACTIVITY_TIME - 64)) | (1L << (F_RESOLUTION - 64)) | (1L << (F_RESOLUTION_DATE - 64)) | (1L << (F_RESOLVED - 64)) | (1L << (F_SLA - 64)) | (1L << (F_SPRINT - 64)) | (1L << (F_STATUS - 64)) | (1L << (F_SUMMARY - 64)) | (1L << (F_TEXT - 64)) | (1L << (F_TIME_SPENT - 64)) | (1L << (F_TYPE - 64)) | (1L << (F_UPDATED - 64)) | (1L << (F_USER - 64)) | (1L << (F_VERSION - 64)) | (1L << (F_VOTER - 64)) | (1L << (F_VOTES - 64)) | (1L << (F_WATCHER - 64)) | (1L << (F_WATCHERS - 64)) | (1L << (F_WORK_RATIO - 64)) | (1L << (IDENTIFIER - 64)) | (1L << (STRING_LITERAL - 64)))) != 0)) {
				{
				{
				setState(26);
				cql_stmt_list();
				}
				}
				setState(31);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(32);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cql_stmt_listContext extends ParserRuleContext {
		public List<Cql_stmtContext> cql_stmt() {
			return getRuleContexts(Cql_stmtContext.class);
		}
		public Cql_stmtContext cql_stmt(int i) {
			return getRuleContext(Cql_stmtContext.class,i);
		}
		public List<TerminalNode> SCOL() { return getTokens(CqlParser.SCOL); }
		public TerminalNode SCOL(int i) {
			return getToken(CqlParser.SCOL, i);
		}
		public Cql_stmt_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cql_stmt_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CqlListener ) ((CqlListener)listener).enterCql_stmt_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CqlListener ) ((CqlListener)listener).exitCql_stmt_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CqlVisitor) return ((CqlVisitor<? extends T>)visitor).visitCql_stmt_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cql_stmt_listContext cql_stmt_list() throws RecognitionException {
		Cql_stmt_listContext _localctx = new Cql_stmt_listContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_cql_stmt_list);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SCOL) {
				{
				{
				setState(34);
				match(SCOL);
				}
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(40);
			cql_stmt();
			setState(49);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(42); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(41);
						match(SCOL);
						}
						}
						setState(44); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==SCOL );
					setState(46);
					cql_stmt();
					}
					} 
				}
				setState(51);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(55);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(52);
					match(SCOL);
					}
					} 
				}
				setState(57);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Cql_stmtContext extends ParserRuleContext {
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<TerminalNode> OPEN_PAR() { return getTokens(CqlParser.OPEN_PAR); }
		public TerminalNode OPEN_PAR(int i) {
			return getToken(CqlParser.OPEN_PAR, i);
		}
		public List<TerminalNode> CLOSE_PAR() { return getTokens(CqlParser.CLOSE_PAR); }
		public TerminalNode CLOSE_PAR(int i) {
			return getToken(CqlParser.CLOSE_PAR, i);
		}
		public Ordering_termContext ordering_term() {
			return getRuleContext(Ordering_termContext.class,0);
		}
		public List<TerminalNode> K_AND() { return getTokens(CqlParser.K_AND); }
		public TerminalNode K_AND(int i) {
			return getToken(CqlParser.K_AND, i);
		}
		public List<TerminalNode> K_OR() { return getTokens(CqlParser.K_OR); }
		public TerminalNode K_OR(int i) {
			return getToken(CqlParser.K_OR, i);
		}
		public Cql_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_cql_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CqlListener ) ((CqlListener)listener).enterCql_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CqlListener ) ((CqlListener)listener).exitCql_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CqlVisitor) return ((CqlVisitor<? extends T>)visitor).visitCql_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Cql_stmtContext cql_stmt() throws RecognitionException {
		Cql_stmtContext _localctx = new Cql_stmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_cql_stmt);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OPEN_PAR) {
				{
				{
				setState(58);
				match(OPEN_PAR);
				}
				}
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(64);
			expr();
			setState(81);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==K_AND || _la==K_OR) {
				{
				{
				setState(65);
				_la = _input.LA(1);
				if ( !(_la==K_AND || _la==K_OR) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(69);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==OPEN_PAR) {
					{
					{
					setState(66);
					match(OPEN_PAR);
					}
					}
					setState(71);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(72);
				expr();
				setState(76);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(73);
						match(CLOSE_PAR);
						}
						} 
					}
					setState(78);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				}
				}
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==CLOSE_PAR) {
				{
				{
				setState(84);
				match(CLOSE_PAR);
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(91);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==K_ORDER) {
				{
				setState(90);
				ordering_term();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExprContext extends ParserRuleContext {
		public OperatorContext operator() {
			return getRuleContext(OperatorContext.class,0);
		}
		public FieldContext field() {
			return getRuleContext(FieldContext.class,0);
		}
		public List<Literal_valueContext> literal_value() {
			return getRuleContexts(Literal_valueContext.class);
		}
		public Literal_valueContext literal_value(int i) {
			return getRuleContext(Literal_valueContext.class,i);
		}
		public Literal_listContext literal_list() {
			return getRuleContext(Literal_listContext.class,0);
		}
		public TerminalNode FUNCTION() { return getToken(CqlParser.FUNCTION, 0); }
		public DatesContext dates() {
			return getRuleContext(DatesContext.class,0);
		}
		public List<TerminalNode> K_NOT() { return getTokens(CqlParser.K_NOT); }
		public TerminalNode K_NOT(int i) {
			return getToken(CqlParser.K_NOT, i);
		}
		public List<TerminalNode> OPEN_PAR() { return getTokens(CqlParser.OPEN_PAR); }
		public TerminalNode OPEN_PAR(int i) {
			return getToken(CqlParser.OPEN_PAR, i);
		}
		public Compare_datesContext compare_dates() {
			return getRuleContext(Compare_datesContext.class,0);
		}
		public List<TerminalNode> CLOSE_PAR() { return getTokens(CqlParser.CLOSE_PAR); }
		public TerminalNode CLOSE_PAR(int i) {
			return getToken(CqlParser.CLOSE_PAR, i);
		}
		public ExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof CqlListener ) ((CqlListener)listener).enterExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof CqlListener ) ((CqlListener)listener).exitExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CqlVisitor) return ((CqlVisitor<? extends T>)visitor).visitExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExprContext expr() throws RecognitionException {
		ExprContext _localctx = new ExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_expr);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(96);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==K_NOT) {
				{
				{
				setState(93);
				match(K_NOT);
				}
				}
				setState(98);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(101);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
			case 1:
				{
				setState(99);
				field();
				}
				break;
			case 2:
				{
				setState(100);
				literal_value();
				}
				break;
			}
			setState(103);
			operator();
			setState(107);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(104);
					match(OPEN_PAR);
					}
					} 
				}
				setState(109);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,13,_ctx);
			}
			setState(114);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,14,_ctx) ) {
			case 1:
				{
				setState(110);
				literal_value();
				}
				break;
			case 2:
				{
				setState(111);
				literal_list();
				}
				break;
			case 3:
				{
				setState(112);
				match(FUNCTION);
				}
				break;
			case 4:
				{
				setState(113);
				dates();
				}
				break;
			}
			setState(117);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
			case 1:
				{
				setState(116);
				compare_dates();
				}
				break;
			}
			setState(122);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			while ( _alt!=2 && _alt!= ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(119);
					match(CLOSE_PAR);
					}
					} 
				}
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,16,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
